# particleuniverse

Plugins/ParticleUniverse/: CMakeLists.txt
Plugins/ParticleUniverse/include/: ParticleUniverseRenderer.h  ParticleUniverseSystem.h  ParticleUniverseTechnique.h  ParticleUniverseTypes.h
Plugins/ParticleUniverse/include/ParticleAffectors/: ParticleUniverseColourAffector.h
Plugins/ParticleUniverse/include/ParticleRenderers/: ParticleUniverseBeamRenderer.h  ParticleUniverseBillboardRenderer.h  ParticleUniverseBoxRenderer.h  ParticleUniverseBoxSet.h  ParticleUniverseEntityRenderer.h  ParticleUniversePrimitiveShapeSet.h  ParticleUniverseRibbonTrailRenderer.h  ParticleUniverseSphereRenderer.h  ParticleUniverseSphereSet.h
Plugins/ParticleUniverse/src/: ParticleUniverseRenderer.cpp  ParticleUniverseRendererTokens.cpp  ParticleUniverseSystem.cpp  ParticleUniverseSystemManagerTokens.cpp  ParticleUniverseTechnique.cpp
Plugins/ParticleUniverse/src/Externs/: ParticleUniverseBoxColliderExternTokens.cpp
Plugins/ParticleUniverse/src/ParticleEmitters/: ParticleUniverseMeshSurfaceEmitter.cpp  ParticleUniverseVertexEmitter.cpp
Plugins/ParticleUniverse/src/ParticleRenderers/: ParticleUniverseBeamRenderer.cpp  ParticleUniverseBeamRendererTokens.cpp  ParticleUniverseBillboardRenderer.cpp  ParticleUniverseBillboardRendererTokens.cpp  ParticleUniverseBoxRenderer.cpp  ParticleUniverseBoxSet.cpp  ParticleUniverseEntityRenderer.cpp  ParticleUniverseLightRenderer.cpp  ParticleUniversePrimitiveShapeSet.cpp  ParticleUniverseRibbonTrailRenderer.cpp  ParticleUniverseSphereRenderer.cpp  ParticleUniverseSphereSet.cpp
